; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/sendmail/src/extr_util.c_close_sendmail_pid.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/sendmail/src/extr_util.c_close_sendmail_pid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Pidf = common dso_local global i32* null, align 8
@SM_TIME_DEFAULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @close_sendmail_pid() #0 {
  %1 = load i32*, i32** @Pidf, align 8
  %2 = icmp eq i32* %1, null
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %8

4:                                                ; preds = %0
  %5 = load i32*, i32** @Pidf, align 8
  %6 = load i32, i32* @SM_TIME_DEFAULT, align 4
  %7 = call i32 @sm_io_close(i32* %5, i32 %6)
  store i32* null, i32** @Pidf, align 8
  br label %8

8:                                                ; preds = %4, %3
  ret void
}

declare dso_local i32 @sm_io_close(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
